DuPont DevSB/src/objects/agf__ADM_Epic__c.object
<CustomObject>
    <fields>
        <fullName>agf__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Committed_By_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed By Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Design_Complete__c</fullName>
        <label>Design Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Design_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Design_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Development_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Development_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Health__c</fullName>
        <label>Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Performance_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Quality_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__T_Shirt_Size__c</fullName>
        <label>T-Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active team.</errorMessage>
            <filterItems>
                <field>agf__ADM_Scrum_Team__c.agf__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Tech_Design_Complete__c</fullName>
        <label>Tech Design Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Test_Design_Complete__c</fullName>
        <label>Test Design Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Epic</label>
    <listViews>
        <fullName>Planning_Epics</fullName>
        <columns>NAME</columns>
        <columns>agf__Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Remediation</value>
        </filters>
        <label>Remediation Epics</label>
    </listViews>
    <listViews>
        <fullName>SC_SC</fullName>
        <columns>NAME</columns>
        <columns>agf__Description__c</columns>
        <columns>agf__Team__c</columns>
        <columns>agf__Committed_By_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>agf__Team__c</field>
            <operation>equals</operation>
            <value>Project Victory S and C Service Cloud</value>
        </filters>
        <filters>
            <field>agf__Committed_By_Team__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Safety &amp; Construction Service Cloud</label>
    </listViews>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Epic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>